@@ -6,6 +6,7 @@ New 1.1.0 version:
     - add the possibility for a DataBuffer class to use its own internal memory
     - KaxCues::AddBlockGroup() was removed as it's broken beyond repair
     - add KaxTrackOperation and related elements for combined stereo/3D tracks or joined virtual tracks
+    - fix a memory leak in KaxReferenceBlock when an internal KaxBlockBlob was created
 
 2010-06-04 robux4/mosu
 New 1.0.0 version:
